<resources>
    <string name="app_name">My Drug Journal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_app_id">health-manager-rnlof</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_medications">Medications</string>
    <string name="my_allergies">Allergies</string>
    <string name="about_and_feedback"><![CDATA[About & Feedback]]></string>
    <string name="emergency_numbers">Emergency Numbers</string>
    <string name="profile_information">Profile</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="app_logo">App logo</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>

    <string-array name="sex_array">
        <item>F</item>
        <item>M</item>
    </string-array>
    <string-array name="blood_type_array">
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="save">Save</string>
    <string name="consumption_method">Route of administration:</string>
    <string name="med_name">Med Name</string>
    <string name="sex">Sex</string>
    <string name="blood_type">Blood type</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="birth_date">Birth date</string>
    <string name="country">Country</string>
    <string name="age">Age</string>
    <string-array name="administration_routes">
        <item>Oral</item>
        <item>Nasal</item>
        <item>Rectal</item>
        <item>Inhalation</item>
        <item>Injection</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rate_us">Rate us</string>
    <string name="david">練大衛 104590050</string>
    <string name="genesis">邱嘉香 104590049</string>
    <string name="final_project">Android final project by:</string>
    <string name="edit">Edit</string>
    <string name="password">Password</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_address">Contact address</string>
    <string name="contact_phone_number">Contact phone number</string>
    <string name="cancel">Cancel</string>
    <string name="details">Details</string>
    <string name="allergen">Allergen</string>

    <string name="weekly_schedule">Weekly Schedule</string>
    <string name="log_out">Log out</string>
    <string name="add_to_calendar">ADD TO CALENDAR</string>
    <string name="contact_us">Contact us</string>
    <string name="dummy_text">dummy text</string>
    <string name="add_to_calendar_message">Do you want to add this medication to your calendar?</string>
    <string name="add_to_calendar_button_text">Add to calendar</string>
    <string name="save_anyway">Save anyway</string>
    <string name="choose_days">Choose days:</string>
    <string name="choose_time">Choose time:</string>
    <string name="add_date">Add Date</string>
    <string name="please_choose_a_day">Please choose a day</string>
    <string name="date_added">Date added</string>
    <string name="call_contact">Call contact?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_delete">Are you sure you want to delete it?</string>
    <string name="welcome">Welcome,</string>
    <string name="description">Description</string>
</resources>
