<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingVertical="@dimen/activity_vertical_margin"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    tools:context=".activities.SigninActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="485dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="182dp"
            android:layout_height="214dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/signInBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sign_in" />

                <Button
                    android:id="@+id/signUpBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sign_up" />

            </LinearLayout>

    </LinearLayout>


</FrameLayout>